test/deca/context/valid/3_31_print_float_d.deca
// Description:
//   test d'argument de print
// 
// Résultat : 
// Affiche 1.23000e+01

{
    float a = 12.3;
    print(a);

}