test/deca/context/invalid/3_40_affectation_cast_void_OBJET.deca
// Description:
//   transtypage d'un type void
// 
// Résultat : 
// Ligne 11 : cast de types incompatibles

{
    void t1;
    int t2 = 14;
    t1 = (int)(t2);

}